# RiscV_Assembler_2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt
apps/io-test/: CMakeLists.txt
apps/io-test/config/: config.cmake
apps/io-test/src/: CMakeLists.txt  main.cpp
apps/io-test/tst_json/: CMakeLists.txt  test1.json
cm_mods/builds/json/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  nlohmann_json.sln  nlohmann_jsonTargets.cmake
cm_mods/builds/json/include/: test_data.hpp
cm_mods/builds/json/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  download_test_data.vcxproj  download_test_data.vcxproj.filters  test-algorithms_cpp11.vcxproj  test-algorithms_cpp11.vcxproj.filters  test-allocator_cpp11.vcxproj  test-allocator_cpp11.vcxproj.filters  test-alt-string_cpp11.vcxproj  test-alt-string_cpp11.vcxproj.filters  (+141 more)
docs/: High-Level Design.md  Outline.md
docs/.obsidian/: workspace.json
docs/File IO/: File IO.md
docs/Interface/: Interface.md
docs/Parser/: Main.md  Supporting Classes.md
include/: CMakeLists.txt  fileio.hpp  interface.hpp
json/: test1.json
lib/: CMakeLists.txt  fileio.cpp  interface.cpp
modules/: CMakeLists.txt
modules/fileio/: CMakeLists.txt  fileio.cpp
modules/interface/: CMakeLists.txt  interface.cpp  interface.hpp
src/: fileio.cpp  interface.cpp
(+729 files in other folders)
